--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1573,6 +1573,10 @@ p {
     .lead {
         font-size: 21px;
     }
+
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
 }
 
 small, .small {
@@ -1776,6 +1780,10 @@ dd {
     .dl-horizontal dd {
         margin-left: 180px;
     }
+
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
 }
 
 abbr[title], abbr[data-original-title] {
@@ -1941,7 +1949,9 @@ pre code {
     .container {
         width: 760px;
     }
-
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
 }
 
 @media (min-width: 992px) {
@@ -1953,6 +1963,9 @@ pre code {
         margin-top: -10px;
         width: 200px;
     }
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -1962,6 +1975,9 @@ pre code {
     .logo{
         margin-left: 0px;
         width: 170px;
+    }
+    .fh5co-parallax{
+        background-size: cover!important;
     }
 }
 
@@ -3414,6 +3430,10 @@ textarea.input-lg, .input-group-lg > textarea.form-control, .input-group-lg > te
 }
 
 @media (min-width: 1180px) {
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
+
     .form-inline .form-group {
         display: inline-block;
         margin-bottom: 0;
@@ -3498,6 +3518,9 @@ textarea.input-lg, .input-group-lg > textarea.form-control, .input-group-lg > te
         text-align: right;
         margin-bottom: 0;
         padding-top: 15px;
+    }
+    .fh5co-parallax{
+        background-size: cover!important;
     }
 }
 
@@ -3643,7 +3666,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 @media (max-width: 1180px) {
-
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
     .navbar-collapse.in {
         overflow-y: unset!important;
     }
@@ -5617,8 +5642,23 @@ a.badge:hover, a.badge:focus {
 
 /* imac */
 @media screen and (min-width: 1800px) {
+
+    .side-banner{
+        top: 105vh!important;
+    }
+
+    .shadow-img{
+        width: 260px!important;
+        height: 260px!important;
+    }
+
+    .doctor-img{
+        width: 260px!important;
+    }
+
     .title-tablet{
-        padding-left: 90px!important;
+        /*padding-left: 90px!important;*/
+        padding-right: 90px!important;
         /*margin-top: -160px!important;*/
         /*padding: 0 0 0 75%!important;*/
     }
@@ -5652,6 +5692,7 @@ a.badge:hover, a.badge:focus {
 
     .slider-container-button{
         margin: -100px auto;
+        text-align: center!important;
     }
 
     .slider-container-button a{
@@ -5715,10 +5756,23 @@ a.badge:hover, a.badge:focus {
 
 
 @media screen and (min-width: 1180px) {
+    .side-banner{
+        top: 115vh!important;
+    }
+
+    .shadow-img{
+        width: 260px!important;
+        height: 260px!important;
+    }
+
+    .doctor-img{
+        width: 260px!important;
+    }
+
     .title-tablet{
-        padding-left: 90px!important;
+        /*padding-left: 40px!important;*/
         /*margin-top: -160px!important;*/
-        /*padding: 0 0 0 75%!important;*/
+        padding: 0 50px 0 0!important;
     }
 
     .jumbotron {
@@ -7762,6 +7816,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (max-width: 1180px) {
+    .title-tablet{
+        /*padding-left: 40px!important;*/
+        /*margin-top: -160px!important;*/
+        padding: 0 50px 0 0!important;
+    }
+
+    .shadow-img{
+        width: 200px!important;
+        height: 200px!important;
+    }
+
+    .doctor-img{
+        width: 200px!important;
+    }
+
+
     #fh5co-hero, .fh5co-hero-wrap, .fh5co-bg-section {
         height: inherit;
         padding: 3em 0;
@@ -7977,6 +8047,15 @@ hr.underline-title-bv{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.shadow-img{
+    /*position: absolute;*/
+    /*top: 120px;*/
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background: #979874ff;
 }
 
 .doctor-img{
@@ -8435,6 +8514,15 @@ pre {
 }
 
 @media screen and (max-width: 992px) {
+    .shadow-img{
+        width: 200px!important;
+        height: 200px!important;
+    }
+
+    .doctor-img{
+        width: 200px!important;
+    }
+
     #fh5co-clients .fh5co-client-logo {
         margin-bottom: 30px;
     }
@@ -8669,6 +8757,15 @@ pre {
 }
 
 @media screen and (max-width: 1180px) {
+    .shadow-img{
+        width: 200px!important;
+        height: 200px!important;
+    }
+
+    .doctor-img{
+        width: 200px!important;
+    }
+
     .fh5co-spacer-lg {
         height: 50px;
     }
@@ -9067,6 +9164,9 @@ img.fh5co-align-right {
     }
     .fh5co-parallax{
         height: 95vh!important;
+        background-repeat: no-repeat!important;
+        background-attachment: fixed!important;
+        background-size: cover!important;
     }
 
     .side-banner-comissoes, .side-banner-convidados{
@@ -9123,6 +9223,10 @@ img.fh5co-align-right {
 
 /*tablets*/
 @media only screen and (min-width:481px) and (max-width:768px){
+    .fh5co-parallax{
+        background-size: cover!important;
+    }
+
     .fh5co-section-convidados{
         margin-top: 350px!important;
     }
@@ -9147,6 +9251,9 @@ img.fh5co-align-right {
 
     .fh5co-parallax{
         height: 90vh!important;
+        background-repeat: no-repeat!important;
+        background-attachment: fixed!important;
+        background-size: cover!important;
     }
 
     .cta-parallax{
@@ -9310,6 +9417,8 @@ img.fh5co-align-right {
 
     .slider-container-button{
         margin: -100px auto;
+        text-align: center!important;
+
     }
 
     .slider-container-button a{
@@ -9564,6 +9673,19 @@ a > img.fh5co-align-center {
     opacity: 1;
 }
 @media (min-width: 768px) {
+    .shadow-img{
+        width: 240px!important;
+        height: 240px!important;
+    }
+
+    .doctor-img{
+        width: 240px!important;
+    }
+
+    .doctor_signature{
+        width: 180px!important;
+    }
+
     .gal-container .modal-dialog {
         width: 55%;
         margin: 50 auto;
@@ -9588,13 +9710,11 @@ i.red{
     align-items: center;
     justify-content: center;*/
     /*flex-wrap: wrap;*/
-    text-align: center;
-    width: 100%;
-    height: 110vh;
-    background-image: url("../images/bg.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    background-image: url("../images/bg.jpg")!important;
+    background-repeat: no-repeat!important;
+    background-attachment: fixed!important;
+    background-size: cover!important;
+
 }
 
 .slider-container{
@@ -9611,6 +9731,8 @@ i.red{
 
 .slider-container-button{
     margin: -100px auto;
+    text-align: center!important;
+
 }
 
 .slider-container-button a{
@@ -9713,7 +9835,7 @@ i.red{
 }
 
 .logo-sub-title{
-    font-family: "jost-light", serif;
+    font-family: "jost-regular", serif;
     /*font-weight: bold;*/
     color: #237088ff;
     margin-top: 0;
@@ -9757,6 +9879,9 @@ i.red{
         padding: 5em 5em;
         background: rgba(0,0,0,.02);
     }
+      .fh5co-parallax{
+          background-size: cover!important;
+      }
   }
 
 .side-banner{
@@ -9855,7 +9980,7 @@ i.red{
 
 .cta-text h5
 {
-    font-family: "jost-regular", serif;
+    font-family: "jost-light", serif;
     color: #fff;
     font-size: 1.5em!important;
 }
