--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,13 @@
 }
 
 @font-face {
+    font-family: 'jost-extra-bold';
+    src: url("../fonts/jost/Jost-ExtraBold.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'jost-medium';
     src: url("../fonts/jost/Jost-Medium.ttf");
     font-weight: normal;
@@ -7922,20 +7929,28 @@ h1, h2, h3, h4, h5, h6 {
     /* text-decoration: underline solid #237088ff 10%; */
 }
 
+.texto *, .texto{
+    text-align: justify!important;
+    font-size: 15px!important;
+    color: grey!important;
+    font-family: "jost-light", arial, "sans-serif"!important;
+    line-height: 22px!important;
+}
+
 .abstracts-title {
     font-family: "jost-bold", serif;
     text-align: left;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bolder;
     color: #237088ff;
     letter-spacing: 2px;
-    margin-left: 30px;
+    margin-left: -63px;
     /* text-decoration: underline solid #237088ff 10%; */
 }
 .abstracts-title span{
-    font-family: "jost-bold", serif;
+    font-family: "jost-semi-bold", serif;
     text-align: left;
-    font-size: 24px;
+    font-size: 22px;
     color: darkgrey;
     letter-spacing: 2px;
 }
@@ -8017,16 +8032,46 @@ hr.underline-title-bv{
 
 .inscricoes-sub-lead-title {
     text-align: left;
-    font-size: 16px;
-    color: darkgrey;
+    font-size: 20px;
+    color: #848484;
     font-family: "jost-bold", arial, sans-serif;
+    line-height: 20px;
+}
+
+.inscricoes-sub-lead-title-nv {
+    text-align: left;
+    font-size: 20px;
+    color: #848484;
+    font-family: "jost-medium", arial, sans-serif;
+    line-height: 20px;
+}
+
+.bank-details {
+    text-align: left;
+    font-size: 20px;
+    color: #848484;
+    font-family: "jost-regular", arial, sans-serif;
+    line-height: 28px;
+}
+
+.ul-info li{
+    margin-left: -40px;
+}
+
+.ul-info-inscricoes{
+    line-height: 14px;
+}
+
+.ul-info-inscricoes li{
+    margin-left: -40px;
 }
 
 .inscricoes-sub-lead {
     text-align: left;
-    font-size: 16px;
+    font-size: 20px;
     color: darkgrey;
-    font-family: "jost-regular", arial, sans-serif;
+    font-family: "jost-light", arial, sans-serif;
+    line-height: 30px;
 }
 
 .inscricoes-sub-lead ul li {
@@ -8040,6 +8085,16 @@ hr.underline-title-bv{
 .signature{
     text-align: left;
     margin-top: 20px;
+}
+
+.header-profile{
+    /*display: flex;
+    align-items: start;
+    justify-content: start;*/
+}
+
+.header-profile h2{
+    margin-top: -30px!important;
 }
 
 .doctor-img-container{
@@ -8068,6 +8123,22 @@ hr.underline-title-bv{
     box-shadow: 6px 5px 0px 5px #979874ff;*/
 }
 
+.shadow-img-individual-modal{
+    position: absolute;
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+    background: #979874ff;
+}
+
+.doctor-img-individual-modal{
+    position: relative;
+    margin: -13px 0 0 -18px;
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+}
+
 .shadow-img-individual{
     position: absolute;
     top: 120px;
@@ -8083,7 +8154,6 @@ hr.underline-title-bv{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin: ;
 }
 
 /*#section-convidados{
@@ -8137,8 +8207,8 @@ section#inscricoes{
 }
 
 .shadow-img-convidado img{
-    width: 140px;
-    height: 140px;
+    width: 140px!important;
+    height: 140px!important;
     border-radius: 50%;
     margin: -8px 0 0 -20px;
 
@@ -8146,8 +8216,8 @@ section#inscricoes{
 
 .shadow-img-convidado{
     position: relative;
-    width: 140px;
-    height: 140px;
+    width: 140px!important;
+    height: 140px!important;
     border-radius: 50%;
     background: #979874ff;
 }
@@ -8580,8 +8650,8 @@ pre {
 .tabela-cell-title {
     display: table-cell;
     width: 100%;
-    font-family: "jost-bold", arial, sans-serif;
-    color: #000;
+    font-family: "jost-extra-bold", arial, sans-serif;
+    color: #717070;
     padding: 7px;
 
 }
@@ -9151,8 +9221,8 @@ img.fh5co-align-right {
     }
 
     .shadow-img-convidado{
-        width: 130px!important;
-        height: 130px!important;
+        width: 110px!important;
+        height: 110px!important;
     }
     .shadow-img-convidado img{
         width: 130px!important;
@@ -9941,7 +10011,7 @@ i.red{
 
 .cta-parallax{
     padding: 0;
-    margin: 3em 0;
+    margin: 3em 0 0 0;
     width: 100%;
     height: 80vh;
     background-image: url("../images/local.jpg");
