página de sponsors em execução

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7915,16 +7915,18 @@ h1, h2, h3, h4, h5, h6 {
     text-align: left;
     font-size: 32px;
     color: #237088;
+    margin-left: 90px!important;
     /*letter-spacing: 2px;*/
     /*line-height: 22px;*/
     /* text-decoration: underline solid #237088 10%; */
 }
 
 .fh5co-section-sublead-sponsor {
-    font-family: "jost-medium", serif;
+    font-family: "jost-semi-bold", serif;
     text-align: left;
-    font-size: 22px;
+    font-size: min(22px, 2vw);
     color: #237088!important;
+    margin-left: 90px!important;
     /*letter-spacing: 2px;*/
     /*line-height: 22px;*/
     /* text-decoration: underline solid #237088 10%; */
@@ -8787,8 +8789,9 @@ pre {
 .patrocinador{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
 }
+
 
 .patrocinador img{
     width: 230px;
@@ -10213,10 +10216,20 @@ i.red{
 }
 
 @media (max-width: 1200px){
-    .fh5co-section-lead{
+    /*.fh5co-section-lead{
         margin-top: -85px!important;
         margin-left: -85px!important;
 
+    }*/
+
+    .fh5co-section-sublead-sponsor {
+        font-family: "jost-semi-bold", serif;
+        text-align: left;
+        font-size: min(22px, 2vw);
+        color: #237088!important;
+        /*letter-spacing: 2px;*/
+        /*line-height: 22px;*/
+        /* text-decoration: underline solid #237088 10%; */
     }
 
     .tabela {
@@ -10287,6 +10300,16 @@ i.red{
     .fh5co-section-lead {
         margin-top: 10px!important;
         margin-left: 0!important;
+    }
+
+    .fh5co-section-sublead-sponsor {
+        font-family: "jost-semi-bold", serif;
+        text-align: left;
+        font-size: min(22px, 2vw);
+        color: #237088!important;
+        /*letter-spacing: 2px;*/
+        /*line-height: 22px;*/
+        /* text-decoration: underline solid #237088 10%; */
     }
 }
 
